<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.shane.smartfeeder.MainActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBackground1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">


            <ImageView
                android:layout_width="@dimen/logo_w"
                android:layout_height="@dimen/logo_h"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:src="@drawable/logo"
                android:contentDescription="@string/todo" />

            <!-- Login Button -->

            <Button
                android:id="@+id/btn_Setup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:background="@color/accutextcolor"
                android:text="@string/Setup"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_program_feeding_schedule"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:background="@color/accutextcolor"
                android:text="@string/program_feeding_schedule"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_open_live_stream"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:background="@color/accutextcolor"
                android:text="@string/open_live_stream"
                android:textColor="@color/white" />


            <Button
                android:id="@+id/btn_ViewClips"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:background="@color/accutextcolor"
                android:text="@string/view_pet_clips"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_logout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:background="@color/accutextcolor"
                android:text="@string/btn_sign_out"
                android:textColor="@color/white" />
        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>